Style updates (and other minor changes)

--- a/app.html
+++ b/app.html
@@ -61,7 +61,7 @@ SOFTWARE.
 
       <div id="footer-wrapper">
          <footer>
-            <p>Copyright &copy; 2014 &ndash; <a href="http://uwarc.uwaterloo.ca/">University of Waterloo Amateur Radio Club</a></p>
+            <p>Copyright &copy; 2014-2015 &ndash; <a href="http://uwarc.uwaterloo.ca/">University of Waterloo Amateur Radio Club</a></p>
          </footer>
       </div><!-- End of footer-wrapper -->
 
